table overflow fix attempt 1

--- a/themes/whodathunk-theme/assets/css/main.css
+++ b/themes/whodathunk-theme/assets/css/main.css
@@ -32,6 +32,7 @@ td {
     padding: 0.3em;
     /*align-items: left;*/
     border-collapse: collapse;
+    overflow: auto;
 }
 
 header {
